--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 095.5 &nbsp;</span><a href="https://codepen.io/athoug/pen/VEaMad" data-linktext="Green Lantern Symbol | Daily CSS Challenge" class="slide_from_bottom">Green Lantern Symbol | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 095 &nbsp;</span><a href="https://codepen.io/athoug/pen/ZqWKmX" data-linktext="Green Lantern | Daily CSS Challenge" class="slide_from_bottom">Green Lantern | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 094 &nbsp;</span><a href="https://codepen.io/athoug/pen/XxXZba" data-linktext="Superman | Daily CSS Challenge" class="slide_from_bottom">Superman | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 093 &nbsp;</span><a href="https://codepen.io/athoug/pen/vVNyOw" data-linktext="Monster's Inc | Daily CSS Challenge" class="slide_from_bottom">Monster's Inc | Daily CSS Challenge</a></h3>
