--- a/day73/index.html
+++ b/day73/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Master sowrd</title>
+        <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
         <div class="box">
