--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 100 &nbsp;</span><a href="https://codepen.io/athoug/pen/ePgyLj" data-linktext="Bug | Daily CSS Challenge" class="slide_from_bottom">Bug | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 099 &nbsp;</span><a href="https://codepen.io/athoug/pen/xyRLxQ" data-linktext="Apple App Store Icon | Daily CSS Challenge" class="slide_from_bottom">Apple App Store Icon | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 098 &nbsp;</span><a href="https://codepen.io/athoug/pen/vVXvPx" data-linktext="Captain America | Daily CSS Challenge" class="slide_from_bottom">Captain America | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 097 &nbsp;</span><a href="https://codepen.io/athoug/pen/jeMBoX" data-linktext="Iron Man | Daily CSS Challenge" class="slide_from_bottom">Iron Man | Daily CSS Challenge</a></h3>
