--- a/day102/index.html
+++ b/day102/index.html
@@ -6,6 +6,19 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-
+        <div class="box">
+          <div class="square">
+            <div class="arow-container">
+              <div class="arrow">
+                <div class="tip"></div>
+                <div class="arrow-head">
+                  <div class="left-head"></div>
+                  <div class="right-head"></div>
+                </div>
+              </div>
+            </div>
+            <div class="square-fill"></div>
+          </div>
+        </div>
     </body>
 </html>
