--- a/day103/index.html
+++ b/day103/index.html
@@ -6,6 +6,62 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-
+        <div class="box">
+          <div class="graph">
+            <div class="pikachu">
+              <div class="pikachu-copy"></div>
+              <div class="ear-left">
+                <div class="inner-ear-left"></div>
+              </div>
+              <div class="ear-right">
+                <div class="inner-ear-right"></div>
+              </div>
+              <div class="face">
+                <div class="eye-left">
+                  <div class="puple-left"></div>
+                </div>
+                <div class="eye-right">
+                  <div class="puple-right"></div>
+                </div>
+                <div class="check-left"></div>
+                <div class="check-right"></div>
+                <div class="nose"></div>
+                <div class="mouth"></div>
+              </div>
+            </div>
+            <div class="link">
+              <div class="link-copy"></div>
+              <div class="hair-1"></div>
+              <div class="hair-2"></div>
+              <div class="hair-3"></div>
+              <div class="hair-4"></div>
+              <div class="hair-5"></div>
+              <div class="hat-top"></div>
+              <div class="hat-bottom"></div>
+              <div class="face-link">
+                <div class="eye-left-link"></div>
+                <div class="eye-right-link"></div>
+                <div class="mouth-link"></div>
+              </div>
+            </div>
+            <div class="mario">
+              <div class="mario-copy"></div>
+              <div class="hair-left"></div>
+              <div class="hair-right"></div>
+              <div class="hat-bottom-mario"></div>
+              <div class="hat-top-mario"></div>
+              <div class="face-mario">
+                <div class="mustash"></div>
+                <div class="left-eye-mario">
+                  <div class="inner-eye-left-mario"></div>
+                </div>
+                <div class="right-eye-mario">
+                  <div class="inner-eye-right-mario"></div>
+                </div>
+                <div class="nose-mario"></div>
+              </div>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
