--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 104 &nbsp;</span><a href="https://codepen.io/athoug/pen/gBxZav" data-linktext="JS Logo | Daily CSS Challenge" class="slide_from_bottom">JS Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 103 &nbsp;</span><a href="https://codepen.io/athoug/pen/VEWNjy" data-linktext="Bar Graph | Daily CSS Challenge" class="slide_from_bottom">Bar Graph | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 102 &nbsp;</span><a href="https://codepen.io/athoug/pen/bmWzqq" data-linktext="Download | Daily CSS Challenge" class="slide_from_bottom">Download | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 101 &nbsp;</span><a href="https://codepen.io/athoug/pen/PypRBX" data-linktext="Cogs | Daily CSS Challenge" class="slide_from_bottom">Cogs | Daily CSS Challenge</a></h3>
