--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 106 &nbsp;</span><a href="https://codepen.io/athoug/pen/aRLrvW" data-linktext="Vue JS Logo | Daily CSS Challenge" class="slide_from_bottom">Vue JS Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 105 &nbsp;</span><a href="https://codepen.io/athoug/pen/MPEpLa" data-linktext="Angular Logo | Daily CSS Challenge" class="slide_from_bottom">Angular Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 104 &nbsp;</span><a href="https://codepen.io/athoug/pen/gBxZav" data-linktext="JS Logo | Daily CSS Challenge" class="slide_from_bottom">JS Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 103 &nbsp;</span><a href="https://codepen.io/athoug/pen/VEWNjy" data-linktext="Bar Graph | Daily CSS Challenge" class="slide_from_bottom">Bar Graph | Daily CSS Challenge</a></h3>
