--- a/day108/index.html
+++ b/day108/index.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-
+        <div class="box">
+          <div class="base-tri"></div>
+          <div class="left-tri"></div>
+          <div class="bottom-right-tri"></div>
+          <div class="square"></div>
+          <div class="middle-tri"></div>
+          <div class="parallegram"></div>
+          <div class="top-right-tri"></div>
+        </div>
+        <div class="elm">
+          <p>elm</p>
+        </div>
     </body>
 </html>
