--- a/day109/index.html
+++ b/day109/index.html
@@ -22,3 +22,8 @@
         </div>
     </body>
 </html>
+
+
+<!-- Inspired by Csaba Gyulai's illustration:
+    https://dribbble.com/shots/3787379-Communication-options-infographic-element
+ -->
