--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 109 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZQjQK" data-linktext="Cell phone | Daily CSS Challenge" class="slide_from_bottom">Cell phone | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 108 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZQjQK" data-linktext="elm Logo | Daily CSS Challenge" class="slide_from_bottom">elm Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 107 &nbsp;</span><a href="https://codepen.io/athoug/pen/wYpvBB" data-linktext="React Logo | Daily CSS Challenge" class="slide_from_bottom">React Logo | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 106 &nbsp;</span><a href="https://codepen.io/athoug/pen/aRLrvW" data-linktext="Vue JS Logo | Daily CSS Challenge" class="slide_from_bottom">Vue JS Logo | Daily CSS Challenge</a></h3>
