--- a/day109/index.html
+++ b/day109/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Phone</title>
-        <link rel="stylesheet" href="/css/master.css">
+        <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
         <div class="box">
