--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 111 &nbsp;</span><a href="https://codepen.io/athoug/pen/NOzrpE" data-linktext="Monitor | Daily CSS Challenge" class="slide_from_bottom">Monitor | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 110 &nbsp;</span><a href="https://codepen.io/athoug/pen/Zqoejr" data-linktext="Laptop | Daily CSS Challenge" class="slide_from_bottom">Laptop | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 109 &nbsp;</span><a href="../day109/index.html" data-linktext="Cell phone | Daily CSS Challenge" class="slide_from_bottom">Cell phone | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 108 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZQjQK" data-linktext="elm Logo | Daily CSS Challenge" class="slide_from_bottom">elm Logo | Daily CSS Challenge</a></h3>
