--- a/day112/index.html
+++ b/day112/index.html
@@ -31,6 +31,6 @@
           </div>
         </div>
 
-        <script type="text/javascript" src="./script.js"></script>
+        <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
