--- a/day112/index.html
+++ b/day112/index.html
@@ -31,6 +31,22 @@
           </div>
         </div>
 
+        <!-- audio sources -->
+        <audio src="./media/261-C.mp3" data-keys="9"></audio>
+        <audio src="./media/277-C-sharp.mp3" data-keys="49"></audio>
+        <audio src="./media/293-D.mp3" data-keys="81"></audio>
+        <audio src="./media/311-D-sharp.mp3" data-keys="50"></audio>
+        <audio src="./media/329-E.mp3" data-keys="87"></audio>
+        <audio src="./media/349-F.mp3" data-keys="69"></audio>
+        <audio src="./media/369F-sharp.mp3" data-keys="52"></audio>
+        <audio src="./media/391-G.mp3" data-keys="82"></audio>
+        <audio src="./media/415-G-sharp.mp3" data-keys="53"></audio>
+        <audio src="./media/440-A.mp3" data-keys="84"></audio>
+        <audio src="./media/466-A-sharp.mp3" data-keys="54"></audio>
+        <audio src="./media/495-B.mp3" data-keys="89"></audio>
+        <audio src="./media/523-C.mp3" data-keys="85"></audio>
+        <audio src="./media/545-C-sharp.mp3" data-keys="56"></audio>
+
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
