--- a/day112/index.html
+++ b/day112/index.html
@@ -32,20 +32,20 @@
         </div>
 
         <!-- audio sources -->
-        <audio src="./media/261-C.mp3" data-keys="9"></audio>
-        <audio src="./media/277-C-sharp.mp3" data-keys="49"></audio>
-        <audio src="./media/293-D.mp3" data-keys="81"></audio>
-        <audio src="./media/311-D-sharp.mp3" data-keys="50"></audio>
-        <audio src="./media/329-E.mp3" data-keys="87"></audio>
-        <audio src="./media/349-F.mp3" data-keys="69"></audio>
-        <audio src="./media/369F-sharp.mp3" data-keys="52"></audio>
-        <audio src="./media/391-G.mp3" data-keys="82"></audio>
-        <audio src="./media/415-G-sharp.mp3" data-keys="53"></audio>
-        <audio src="./media/440-A.mp3" data-keys="84"></audio>
-        <audio src="./media/466-A-sharp.mp3" data-keys="54"></audio>
-        <audio src="./media/495-B.mp3" data-keys="89"></audio>
-        <audio src="./media/523-C.mp3" data-keys="85"></audio>
-        <audio src="./media/545-C-sharp.mp3" data-keys="56"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/261-C.mp3" data-key="a"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/277-C-sharp.mp3" data-key="w"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/293-D.mp3" data-key="s"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/311-D-sharp.mp3" data-key="e"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/329-E.mp3" data-key="d"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/349-F.mp3" data-key="f"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/369F-sharp.mp3" data-key="t"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/391-G.mp3" data-key="g"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/415-G-sharp.mp3" data-key="h"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/440-A.mp3" data-key="u"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/466-A-sharp.mp3" data-key="j"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/495-B.mp3" data-key="k"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/523-C.mp3" data-key="o"></audio>
+        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/545-C-sharp.mp3" data-key="l"></audio>
 
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
