--- a/day112/index.html
+++ b/day112/index.html
@@ -10,22 +10,22 @@
           <div class="keyboard">
             <div class="keys">
               <div class="black-keys">
-                <div class="keys-black" data-key="w"></div>
-                <div class="keys-black" data-key="e"></div>
-                <div class="keys-black" data-key="t"></div>
-                <div class="keys-black" data-key="u"></div>
-                <div class="keys-black" data-key="o"></div>
+                <div class="keys-black keys" data-key="w"></div>
+                <div class="keys-black keys" data-key="e"></div>
+                <div class="keys-black keys" data-key="t"></div>
+                <div class="keys-black keys" data-key="u"></div>
+                <div class="keys-black keys" data-key="o"></div>
               </div>
               <div class="white-keys">
-                <div class="keys-white" data-key="a"></div>
-                <div class="keys-white" data-key="s"></div>
-                <div class="keys-white" data-key="d"></div>
-                <div class="keys-white" data-key="f"></div>
-                <div class="keys-white" data-key="g"></div>
-                <div class="keys-white" data-key="h"></div>
-                <div class="keys-white" data-key="j"></div>
-                <div class="keys-white" data-key="k"></div>
-                <div class="keys-white" data-key="l"></div>
+                <div class="keys-white keys" data-key="a"></div>
+                <div class="keys-white keys" data-key="s"></div>
+                <div class="keys-white keys" data-key="d"></div>
+                <div class="keys-white keys" data-key="f"></div>
+                <div class="keys-white keys" data-key="g"></div>
+                <div class="keys-white keys" data-key="h"></div>
+                <div class="keys-white keys" data-key="j"></div>
+                <div class="keys-white keys" data-key="k"></div>
+                <div class="keys-white keys" data-key="l"></div>
               </div>
             </div>
           </div>
