--- a/day112/index.html
+++ b/day112/index.html
@@ -10,42 +10,42 @@
           <div class="keyboard">
             <div class="keys">
               <div class="black-keys">
-                <div class="keys-black keys" data-key="w"></div>
-                <div class="keys-black keys" data-key="e"></div>
-                <div class="keys-black keys" data-key="t"></div>
-                <div class="keys-black keys" data-key="u"></div>
-                <div class="keys-black keys" data-key="o"></div>
+                <div class="key keys-black" data-key="w"></div>
+                <div class="key keys-black" data-key="e"></div>
+                <div class="key keys-black" data-key="t"></div>
+                <div class="key keys-black" data-key="u"></div>
+                <div class="key keys-black" data-key="o"></div>
               </div>
               <div class="white-keys">
-                <div class="keys-white keys" data-key="a"></div>
-                <div class="keys-white keys" data-key="s"></div>
-                <div class="keys-white keys" data-key="d"></div>
-                <div class="keys-white keys" data-key="f"></div>
-                <div class="keys-white keys" data-key="g"></div>
-                <div class="keys-white keys" data-key="h"></div>
-                <div class="keys-white keys" data-key="j"></div>
-                <div class="keys-white keys" data-key="k"></div>
-                <div class="keys-white keys" data-key="l"></div>
+                <div class="key keys-white" data-key="a"></div>
+                <div class="key keys-white" data-key="s"></div>
+                <div class="key keys-white" data-key="d"></div>
+                <div class="key keys-white" data-key="f"></div>
+                <div class="key keys-white" data-key="g"></div>
+                <div class="key keys-white" data-key="h"></div>
+                <div class="key keys-white" data-key="j"></div>
+                <div class="key keys-white" data-key="k"></div>
+                <div class="key keys-white" data-key="l"></div>
               </div>
             </div>
           </div>
         </div>
 
         <!-- audio sources -->
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/261-C.mp3" data-key="a"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/277-C-sharp.mp3" data-key="w"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/293-D.mp3" data-key="s"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/311-D-sharp.mp3" data-key="e"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/329-E.mp3" data-key="d"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/349-F.mp3" data-key="f"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/369F-sharp.mp3" data-key="t"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/391-G.mp3" data-key="g"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/415-G-sharp.mp3" data-key="h"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/440-A.mp3" data-key="u"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/466-A-sharp.mp3" data-key="j"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/495-B.mp3" data-key="k"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/523-C.mp3" data-key="o"></audio>
-        <audio src="https://github.com/athoug/180-websites-project/blob/master/day62/media/545-C-sharp.mp3" data-key="l"></audio>
+        <audio src="./media/261-C.mp3" data-key="a"></audio>
+        <audio src="./media/277-C-sharp.mp3" data-key="w"></audio>
+        <audio src="./media/293-D.mp3" data-key="s"></audio>
+        <audio src="./media/311-D-sharp.mp3" data-key="e"></audio>
+        <audio src="./media/329-E.mp3" data-key="d"></audio>
+        <audio src="./media/349-F.mp3" data-key="f"></audio>
+        <audio src="./media/369F-sharp.mp3" data-key="t"></audio>
+        <audio src="./media/391-G.mp3" data-key="g"></audio>
+        <audio src="./media/415-G-sharp.mp3" data-key="h"></audio>
+        <audio src="./media/440-A.mp3" data-key="u"></audio>
+        <audio src="./media/466-A-sharp.mp3" data-key="j"></audio>
+        <audio src="./media/495-B.mp3" data-key="k"></audio>
+        <audio src="./media/523-C.mp3" data-key="o"></audio>
+        <audio src="./media/545-C-sharp.mp3" data-key="l"></audio>
 
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
