--- a/day112/index.html
+++ b/day112/index.html
@@ -31,6 +31,11 @@
           </div>
         </div>
 
+        <!-- footer -->
+        <footer id='foot'>
+          <p id='footp'>Athoug Alsougayer &copy; 2018 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a> &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
+        </footer>
+
         <!-- audio sources -->
         <audio src="./media/261-C.mp3" data-key="a"></audio>
         <audio src="./media/277-C-sharp.mp3" data-key="w"></audio>
