--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 113 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZVXNO" data-linktext="Nintendo 2DS | Daily CSS Challenge" class="slide_from_bottom">Nintendo 2DS | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 112 &nbsp;</span><a href="../day112/index.html" data-linktext="Music Keyboard | Daily CSS Challenge" class="slide_from_bottom">Music Keyboard | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 111 &nbsp;</span><a href="https://codepen.io/athoug/pen/NOzrpE" data-linktext="Monitor | Daily CSS Challenge" class="slide_from_bottom">Monitor | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 110 &nbsp;</span><a href="https://codepen.io/athoug/pen/Zqoejr" data-linktext="Laptop | Daily CSS Challenge" class="slide_from_bottom">Laptop | Daily CSS Challenge</a></h3>
