--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 115 &nbsp;</span><a href="https://codepen.io/athoug/pen/xyQvMV" data-linktext="Critter | Daily CSS Challenge" class="slide_from_bottom">Critter | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 114 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZZoKg" data-linktext="Mascot for Startup | Daily CSS Challenge" class="slide_from_bottom">Mascot for Startup | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 113 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZVXNO" data-linktext="Nintendo 2DS | Daily CSS Challenge" class="slide_from_bottom">Nintendo 2DS | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 112 &nbsp;</span><a href="../day112/index.html" data-linktext="Music Keyboard | Daily CSS Challenge" class="slide_from_bottom">Music Keyboard | Daily CSS Challenge</a></h3>
