--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 116 &nbsp;</span><a href="https://codepen.io/athoug/pen/NOeQZB" data-linktext="Animal | Daily CSS Challenge" class="slide_from_bottom">Animal | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 115 &nbsp;</span><a href="https://codepen.io/athoug/pen/xyQvMV" data-linktext="Critter | Daily CSS Challenge" class="slide_from_bottom">Critter | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 114 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZZoKg" data-linktext="Mascot for Startup | Daily CSS Challenge" class="slide_from_bottom">Mascot for Startup | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 113 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZVXNO" data-linktext="Nintendo 2DS | Daily CSS Challenge" class="slide_from_bottom">Nintendo 2DS | Daily CSS Challenge</a></h3>
