--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 119 &nbsp;</span><a href="https://codepen.io/athoug/pen/ZqZyZL" data-linktext="Pinata | Daily CSS Challenge" class="slide_from_bottom">Pinata | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 118 &nbsp;</span><a href="https://codepen.io/athoug/pen/dgreoa" data-linktext="Space Inspired | Daily CSS Challenge" class="slide_from_bottom">Space Inspired | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 117 &nbsp;</span><a href="https://codepen.io/athoug/pen/VERwLX" data-linktext="Robot | Daily CSS Challenge" class="slide_from_bottom">Robot | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 116 &nbsp;</span><a href="https://codepen.io/athoug/pen/NOeQZB" data-linktext="Animal | Daily CSS Challenge" class="slide_from_bottom">Animal | Daily CSS Challenge</a></h3>
