--- a/day120/index.html
+++ b/day120/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cake</title>
+    <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
     <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
