--- a/day121/index.html
+++ b/day121/index.html
@@ -6,6 +6,24 @@
     <link rel="stylesheet" href="./css/master.css">
   </head
   <body>
-
+    <div class="box">
+      <div class="beer">
+        <div class="cup">
+          <div class="liquid"></div>
+          <div class="stripe-1"></div>
+          <div class="stripe-2"></div>
+          <div class="stripe-3"></div>
+        </div>
+        <div class="cup-holder"></div>
+        <div class="foam">
+          <div class="foam-1"></div>
+          <div class="foam-2"></div>
+          <div class="foam-3"></div>
+        </div>
+        <div class="bubbles-1"></div>
+        <div class="bubbles-2"></div>
+        <div class="bubbles-3"></div>
+      </div>
+    </div>
   </body>
 </html>
