--- a/day122/index.html
+++ b/day122/index.html
@@ -8,6 +8,65 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="box">
+        <div class="mat">
+            <div class="top-section">
+                <div class="btn-left"></div>
+                <div class="btn-right"></div>
+                <div class="sensor">
+                    <div class="edge-bottom"></div>
+                    <div class="edge-left"></div>
+                    <div class="edge-right"></div>
+                    <div class="mid-seperator"></div>
+                    <div class="mid-l"></div>
+                    <div class="mid-r"></div>
+                    <div class="edge-l"></div>
+                    <div class="edge-r"></div>
+                </div>
+            </div>
+            <div class="bottom-section">
+                <div class="top">
+                    <div class="top-l">
+                        <div class="b-mat">
+                            <p>B</p>
+                        </div>
+                    </div>
+                    <div class="top-m">
+                        <div class="left-b"></div>
+                        <div class="right-b"></div>
+                        <div class="arrow-up"></div>
+                    </div>
+                    <div class="top-r">
+                        <div class="a-mat">
+                            <p>A</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="middle">
+                    <div class="middle-l">
+                        <div class="top-b"></div>
+                        <div class="bottom-b"></div>
+                        <div class="arrow-left"></div>
+                    </div>
+                    <div class="middle-m"></div>
+                    <div class="middle-r">
+                        <div class="top-b"></div>
+                        <div class="bottom-b"></div>
+                        <div class="arrow-right"></div>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <div class="bottom-l"></div>
+                    <div class="bottom-m">
+                        <div class="left-b"></div>
+                        <div class="right-b"></div>
+                        <div class="arrow-down"></div>
+                    </div>
+                    <div class="bottom-r"></div>
+                </div>
+            </div>
+            <div class="oval"> </div>
+        </div>
+    </div>
 </body>
 </html>
