--- a/day122/index.html
+++ b/day122/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dance Dance Revoelotion</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
