--- a/day123/index.html
+++ b/day123/index.html
@@ -8,6 +8,50 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">
+        <div class="party-hat">
+            <div class="hat">
+                <div class="poka-1"></div>
+                <div class="poka-2"></div>
+                <div class="poka-3"></div>
+                <div class="poka-4"></div>
+                <div class="poka-5"></div>
+                <div class="poka-6"></div>
+            </div>
+            <div class="base-hat"></div>
+            <div class="starify-1"></div>
+            <div class="starify-2"></div>
+        </div>
+        <div class="present">
+            <div class="box-present">
+                <div class="tri-1"></div>
+                <div class="tri-2"></div>
+                <div class="tri-3"></div>
+                <div class="tri-4"></div>
+                <div class="tri-5"></div>
+                <div class="tri-6"></div>
+                <div class="ribon-body-y"></div>
+                <div class="ribon-body-x"></div>
+            </div>
+            <div class="ribon-l"></div>
+            <div class="ribon-r"></div>
+            <div class="ribon-curve-l"></div>
+            <div class="ribon-curve-r"></div>
+        </div>
+        <div class="ballon">
+            <div class="string"></div>
+            <div class="curve"></div>
+            <div class="ballon-ball">
+                <div class="stripe-1"></div>
+                <div class="stripe-2"></div>
+                <div class="stripe-3"></div>
+                <div class="stripe-4"></div>
+                <div class="stripe-5"></div>
+            </div>
+            <div class="bottom-ballon"></div>
+        </div>
+    </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
