--- a/default.html
+++ b/default.html
@@ -75,6 +75,8 @@
 
     <section>
         <div class="container">
+<h3><span class="days"> Day 123 &nbsp;</span><a href="https://codepen.io/athoug/pen/jQNZEE" data-linktext="Party City | Daily CSS Challenge"
+class="slide_from_bottom">Party City | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 122 &nbsp;</span><a href="https://codepen.io/athoug/pen/yRmRNV" data-linktext="Dance Dance Revolution | Daily CSS Challenge"
         class="slide_from_bottom">Dance Dance Revolution | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 121 &nbsp;</span><a href="https://codepen.io/athoug/pen/pxXVKb" data-linktext="Craft Beer | Daily CSS Challenge" class="slide_from_bottom">Craft Beer | Daily CSS Challenge</a></h3>
