footer and completed style

--- a/day124/index.html
+++ b/day124/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
     <title>DrumKit</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container page-content">
         <div class="single-plate">
             <div class="stick-center-s"></div>
             <div class="leg-s-l"></div>
@@ -79,9 +79,13 @@
                 <div class="plate-s-base"></div>
                 <div class="oval-s"></div>
             </div>
-
         </div>
     </div>
+
+    <footer id='foot'>
+        <p id='footp'>Athoug Alsougayer &copy; 2018 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a>
+            &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
+    </footer>
 
     <audio src="./sounds/single-plate.wav" data-key="83"></audio>
     <audio src="./sounds/drum-l.wav" data-key="65"></audio>
