--- a/day125/index.html
+++ b/day125/index.html
@@ -19,6 +19,10 @@
         </div>
     </div>
 
+    <footer id='foot'>
+        <p id='footp'>Athoug Alsougayer &copy; 2018 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a>
+            &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 
