--- a/day125/index.html
+++ b/day125/index.html
@@ -15,7 +15,7 @@
         <div class="clock">
             <div class="handel seconds-hand"></div>
             <div class="handel minutes-hand"></div>
-            <div class="handel hour-hand"></div>
+            <div class="handel hours-hand"></div>
         </div>
     </div>
 
