--- a/day125/index.html
+++ b/day125/index.html
@@ -19,6 +19,78 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="clock">
+            <div class="handel seconds-hand"></div>
+            <div class="handel minutes-hand"></div>
+            <div class="handel hours-hand"></div>
+        </div>
+    </div>
+
     <footer id='foot'>
         <p id='footp'>Athoug Alsougayer &copy; 2018 &nbsp; &nbsp;&nbsp; &nbsp;<a href="../default.html" id='foota1'>Home</a>
             &nbsp;| &nbsp; <a href="http://athoug.com/" id='foota2'>blog</a></p>
