--- a/default.html
+++ b/default.html
@@ -77,6 +77,8 @@
 
     <section>
         <div class="container">
+          <h3><span class="days"> Day 125 &nbsp;</span><a href="../day125/index.html" data-linktext="Time Capsule" class="slide_from_bottom">Time Capsule</a></h3>
+
             <h3><span class="days"> Day 124 &nbsp;</span><a href="../day124/index.html" data-linktext="Drums" class="slide_from_bottom">Drums</a></h3>
 
             <h3><span class="days"> Day 123 &nbsp;</span><a href="https://codepen.io/athoug/pen/jQNZEE" data-linktext="Party City | Daily CSS Challenge"
