--- a/day125/index.html
+++ b/day125/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Time Madness</title>
+    <title>Time capsule</title>
 </head>
 
 <body>
