--- a/day128/index.html
+++ b/day128/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Buttons</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <main class="keys">
@@ -64,5 +65,7 @@
     <audio data-key="66" src="./assets/audio/ufo.mp3"></audio>
     <audio data-key="78" src="./assets/audio/piston-1.mp3"></audio>
     <audio data-key="77" src="./assets/audio/veil.mp3"></audio>
+
+    <script src="./app.js"></script>
 </body>
 </html>
