--- a/default.html
+++ b/default.html
@@ -77,6 +77,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 129 &nbsp;</span><a href="./day129/index.html" data-linktext="Theme Clock"class="slide_from_bottom">Theme Clock</a></h3>
             <h3><span class="days"> Day 128 &nbsp;</span><a href="./day128/index.html" data-linktext="Sound keys"class="slide_from_bottom">Sound key</a></h3>
             <h3><span class="days"> Day 127 &nbsp;</span><a href="https://codepen.io/athoug/pen/mgbdJK" data-linktext="Memory Game"class="slide_from_bottom">Memory Game</a></h3>
             <h3><span class="days"> Day 126 &nbsp;</span><a href="https://codepen.io/athoug/pen/EMXmQg" data-linktext="Gameboy" class="slide_from_bottom">Gameboy</a></h3>
