--- a/day129/index.html
+++ b/day129/index.html
@@ -13,11 +13,72 @@
 <body>
     <main>
         <div class="container">
-            <div class="clock">
+            <div class="seconds-container">
+                <div class="seconds" data-key="0"></div>
+                <div class="seconds" data-key="1"></div>
+                <div class="seconds" data-key="2"></div>
+                <div class="seconds" data-key="3"></div>
+                <div class="seconds" data-key="4"></div>
+                <div class="seconds" data-key="5"></div>
+                <div class="seconds" data-key="6"></div>
+                <div class="seconds" data-key="7"></div>
+                <div class="seconds" data-key="8"></div>
+                <div class="seconds" data-key="9"></div>
+                <div class="seconds" data-key="10"></div>
+                <div class="seconds" data-key="11"></div>
+                <div class="seconds" data-key="12"></div>
+                <div class="seconds" data-key="13"></div>
+                <div class="seconds" data-key="14"></div>
+                <div class="seconds" data-key="15"></div>
+                <div class="seconds" data-key="17"></div>
+                <div class="seconds" data-key="18"></div>
+                <div class="seconds" data-key="19"></div>
+                <div class="seconds" data-key="20"></div>
+                <div class="seconds" data-key="21"></div>
+                <div class="seconds" data-key="22"></div>
+                <div class="seconds" data-key="23"></div>
+                <div class="seconds" data-key="24"></div>
+                <div class="seconds" data-key="25"></div>
+                <div class="seconds" data-key="26"></div>
+                <div class="seconds" data-key="27"></div>
+                <div class="seconds" data-key="28"></div>
+                <div class="seconds" data-key="29"></div>
+                <div class="seconds" data-key="30"></div>
+                <div class="seconds" data-key="31"></div>
+                <div class="seconds" data-key="32"></div>
+                <div class="seconds" data-key="33"></div>
+                <div class="seconds" data-key="34"></div>
+                <div class="seconds" data-key="35"></div>
+                <div class="seconds" data-key="36"></div>
+                <div class="seconds" data-key="37"></div>
+                <div class="seconds" data-key="38"></div>
+                <div class="seconds" data-key="39"></div>
+                <div class="seconds" data-key="40"></div>
+                <div class="seconds" data-key="41"></div>
+                <div class="seconds" data-key="42"></div>
+                <div class="seconds" data-key="43"></div>
+                <div class="seconds" data-key="44"></div>
+                <div class="seconds" data-key="45"></div>
+                <div class="seconds" data-key="46"></div>
+                <div class="seconds" data-key="47"></div>
+                <div class="seconds" data-key="48"></div>
+                <div class="seconds" data-key="49"></div>
+                <div class="seconds" data-key="50"></div>
+                <div class="seconds" data-key="51"></div>
+                <div class="seconds" data-key="52"></div>
+                <div class="seconds" data-key="53"></div>
+                <div class="seconds" data-key="54"></div>
+                <div class="seconds" data-key="55"></div>
+                <div class="seconds" data-key="56"></div>
+                <div class="seconds" data-key="57"></div>
+                <div class="seconds" data-key="58"></div>
+                <div class="seconds" data-key="59"></div>
+            </div>
+            <!-- <div class="clock">
                 <div class="hand second-hand"></div>
                 <div class="hand minute-hand"></div>
                 <div class="hand hour-hand"></div>
-            </div>
+            </div> -->
         </div>
     </main>
 </body>
