--- a/day129/index.html
+++ b/day129/index.html
@@ -30,6 +30,7 @@
                 <div class="seconds" data-key="13"></div>
                 <div class="seconds" data-key="14"></div>
                 <div class="seconds" data-key="15"></div>
+                <div class="seconds" data-key="16"></div>
                 <div class="seconds" data-key="17"></div>
                 <div class="seconds" data-key="18"></div>
                 <div class="seconds" data-key="19"></div>
@@ -74,11 +75,11 @@
                 <div class="seconds" data-key="58"></div>
                 <div class="seconds" data-key="59"></div>
             </div>
-            <!-- <div class="clock">
+            <div class="clock">
                 <div class="hand second-hand"></div>
                 <div class="hand minute-hand"></div>
                 <div class="hand hour-hand"></div>
-            </div> -->
+            </div>
         </div>
     </main>
 </body>
