--- a/day129/index.html
+++ b/day129/index.html
@@ -76,11 +76,14 @@
                 <div class="seconds" data-key="59"></div>
             </div>
             <div class="clock">
-                <div class="hand second-hand"></div>
-                <div class="hand minute-hand"></div>
                 <div class="hand hour-hand"></div>
+                <div class="hand minute-hand"></div>
+                <div class="hand second-hand"></div>
+                <div class="circle-clock"></div>
             </div>
         </div>
     </main>
+
+    <script src="./app.js"></script>
 </body>
 </html>
