style almost complete

--- a/day129/index.html
+++ b/day129/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,11 +12,13 @@
     <title>Theme Clock</title>
 </head>
 <body class="light">
-    <div class="theme-toggler">
-        <i class="far fa-moon"></i>
-        <button role="toggle Theme"><span class="toggle-circle toggle-circle-light"></span></button>
-        <i class="far fa-sun"></i>
-    </div>
+    <header>
+        <div class="theme-toggler">
+            <i class="far fa-moon"></i>
+            <button role="toggle Theme"><span class="toggle-circle toggle-circle-light"></span></button>
+            <i class="far fa-sun"></i>
+        </div>
+    </header>
     <main>
         <div class="container light-container">
             <div class="seconds-container dark-seconds hide">
