--- a/day130/index.html
+++ b/day130/index.html
@@ -10,31 +10,71 @@
 <body>
     <main>
         <div class="controls">
-            <input type="color" value="#FFC79E">
+            <div>
+                <label for="color">Color </label>
+                <input id="color" type="color" value="#FFC79E" name="color">
+            </div>
+            <div>
+                <label for="face-scale">Face Scale </label>
+                <input id="face-scale" type="range" value="1" name="face-scale" min="0.1" max="1.9" step="0.1">
+            </div>
+            <div>
+                <label for="face-width">Face Width </label>
+                <input id="face-width" type="range" value="1" name="face-width" min="5" max="90" step="1" data-suffix="%">
+            </div>
+            <div>
+                <label for="face-height">Face Height </label>
+                <input id="face-height" type="range" value="1" name="face-height" min="5" max="110" step="1" data-suffix="%">
+            </div>
+            <div>
+                <label for="eye-scale">Eye size </label>
+                <input id="eye-scale" type="range" value="1" name="eye-scale" min="0.1" max="2" step="0.1">
+            </div>
+            <div>
+                <label for="ear-scale">Ear size </label>
+                <input id="ear-scale" type="range" value="1" name="ear-scale" min="0.1" max="2" step="0.1">
+            </div>
+            <div>
+                <label for="blush">blush </label>
+                <input id="blush" type="checkbox" name="blush" checked>
+            </div>
+            <div>
+                Hair
+                <label for="hair-full">Full</label>
+                <input id="hair-full" type="radio" name="hair" value="full" checked>
+                <label for="hair-semi">Semi-Bold</label>
+                <input id="hair-semi" type="radio" name="hair" value="semi">
+                <label for="hair-bold">Bold</label>
+                <input id="hair-bold" type="radio" name="hair" value="bold">
+            </div>
         </div>
+
         <div class="container">
-            <div class="ear-left" data-key="ear">
-                <div class="inner-ear-l"></div>
-            </div>
-            <div class="ear-right" data-key="ear">
-                <div class="inner-ear-r"></div>
-            </div>
-            <div class="hair-back" data-key="hair"></div>
             <div class="face" data-key="skin">
-                <div class="nose" data-key="nose">
-                    <div class="nose-shade" data-key="nose-shade"></div>
+                <div class="ear-left" data-key="ear">
+                    <div class="inner-ear-l"></div>
                 </div>
-                <div class="eye-l" data-key="eye"></div>
-                <div class="eye-r" data-key="eye"></div>
-                <div class="eye-brow-l" data-key="eye-brow"></div>
-                <div class="eye-brow-r" data-key="eye-brow"></div>
-                <div class="blush-l" data-key="blush"></div>
-                <div class="blush-r" data-key="blush"></div>
-                <div class="mouth" data-key="mouth"></div>
+                <div class="ear-right" data-key="ear">
+                    <div class="inner-ear-r"></div>
+                </div>
+                <div class="hair-back" data-key="hair"></div>
+                <div class="face-copy" data-key="skin">
+                    <div class="nose" data-key="nose">
+                        <div class="nose-shade" data-key="nose-shade"></div>
+                    </div>
+                    <div class="eye-l" data-key="eye"></div>
+                    <div class="eye-r" data-key="eye"></div>
+                    <div class="eye-brow-l" data-key="eye-brow"></div>
+                    <div class="eye-brow-r" data-key="eye-brow"></div>
+                    <div class="blush-l" data-key="blush"></div>
+                    <div class="blush-r" data-key="blush"></div>
+                    <div class="mouth" data-key="mouth"></div>
+                </div>
+                <div class="hair-front" data-key="hair"></div>
             </div>
-            <div class="hair-front" data-key="hair"></div>
         </div>
     </main>
+
     <script src="app.js"></script>
 </body>
 </html>
