--- a/day130/index.html
+++ b/day130/index.html
@@ -62,8 +62,10 @@
                     <div class="nose" data-key="nose">
                         <div class="nose-shade" data-key="nose-shade"></div>
                     </div>
-                    <div class="eye-l" data-key="eye"></div>
-                    <div class="eye-r" data-key="eye"></div>
+                    <div class="move-area">
+                        <div class="eye eye-l" data-key="eye"></div>
+                        <div class="eye eye-r" data-key="eye"></div>
+                    </div>
                     <div class="eye-brow-l" data-key="eye-brow"></div>
                     <div class="eye-brow-r" data-key="eye-brow"></div>
                     <div class="blush-l" data-key="blush"></div>
